--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,18 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "symfony/event-dispatcher": "2.5.*"
+        "videlalvaro/php-amqplib": "2.2.*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "*",
         "phpunit/phpunit": "4.2.*",
         "phpmd/phpmd": "dev-master",
-        "fabpot/php-cs-fixer": "@stable"
+        "fabpot/php-cs-fixer": "@stable",
+        "mockery/mockery": "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "Solilokiam\\AsyncEventDispatcher\\": "src/"
+        }
     }
 }
