Fix test suites

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,7 +8,7 @@
         >
     <testsuites>
         <testsuite name="Solilokiam Async EventDispatcher Component Test Suite">
-            <directory>./Tests/</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
