--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,6 +6,7 @@ tools:
     php_changetracking: true
     sensiolabs_security_checker: true
     php_mess_detector: true
+    external_code_coverage: true
 filter:
     excluded_paths:
         - 'tests/*'
