--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "videlalvaro/php-amqplib": "2.2.*",
+        "predis/predis": "1.0.*",
         "jms/serializer": "0.17.*@dev"
     },
     "require-dev": {
