--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "videlalvaro/php-amqplib": "2.2.*",
         "predis/predis": "1.0.*",
-        "jms/serializer": "0.17.*@dev"
+        "symfony/serializer": "2.5.6"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "dev-master",
